Update membership language to be 1. more concise, 2. drop the inaccurate 'review' step

--- a/src/pages/docs/membership.mdx
+++ b/src/pages/docs/membership.mdx
@@ -11,7 +11,7 @@ export const metadata = {
 
 ## Join Our Community
 
-As a member, you'll have 24/7 access to tools, equipment, and space to bring your projects to life. But more importantly, you'll be part of a passionate community that thrives on sharing knowledge, exchanging ideas, and working together.
+As a member, you'll have 24/7 access to tools, equipment, and space to bring your projects to life.
 
 ## Membership Types
 - <u>Sponsor Membership</u>  **$200 per month**. Sponsors help provide scholarships for those who can not afford classes or full membership dues.
@@ -19,32 +19,44 @@ As a member, you'll have 24/7 access to tools, equipment, and space to bring you
 - <u>Discounted Membership</u> **$100 per month** and is intended for any who cannot otherwise afford full dues. Choose this option if you need it!
 
 ## Getting Started with Membership
+If you have any questions at any point in the membership process, please [reach out to us](./contact).
+
+## Getting Started with Membership
 We've tried to make the process for membership as straightforward as possible. If you have any questions throughout the process, please [reach out to us](./contact).
 
 1. **Visit Us:** Get a feel for the space and meet our community. Potential members should visit us during one of our [events](./events).
 
-2. **Apply:** If you decide that Sequoia Fabrica is the right fit for you, complete our [membership application form](https://forms.gle/r3AytzzxeKX7NUaM8).
+2. **Sign the waiver:** <a href={urlConstants.docusealWaiver}>Sign the waiver</a>. Waivers are required for all members.
 
-3. **Sign up for an Orientation:** <a href={urlConstants.bookWhen} data-goatcounter-click={urlConstants.bookWhen}>Member applicant orientations</a> are 1st and 3rd Tuesdays at 7PM every month. If this time will not work, [get in touch](./contact).
+3. **Apply:** If you decide that Sequoia Fabrica is the right fit for you, complete our [membership application form](https://forms.gle/r3AytzzxeKX7NUaM8).
 
-4. **Application Review** Our Board and Members review new applications as they are received. We will reach out with next steps and any questions.
+4. **Sign up for an Orientation:** Once you have submitted an application, you should sign up for orientation. <a href={urlConstants.bookWhen} data-goatcounter-click={urlConstants.bookWhen}>Member applicant orientations</a> are 1st and 3rd Tuesdays at 7PM every month. If this time will not work, [get in touch](./contact). Attend the orientation session to learn more about the community and how to get started. We will provide a tour of the facility and notes on our operating policies as well as expectations for conduct, behavior, and contributions.
 
-5. **Start Paying Dues**. Membership dues are accepted through <a href={urlConstants.bookWhenMembership} data-goatcounter-click={urlConstants.bookWhenMembership}>BookWhen</a>. *Do not start paying dues before completing the steps above!*
+5. **Final Review and Dues:** Once you have completed all the steps above, you will receive an email confirming your pending membership status. Please review all information in this email as we will need to schedule a final review to get you access to the facility. Before receiving your access, you will be asked to begin paying your dues.
 
-6. **Become a Part of the Community:** Once you're a member, you will be provided a key code, have access to the space to use as you please as long as it doesn't go against our community rules. Start using the space, join [a grove](./faq#what_is_a_grove), help us maintain our workshop.
+6. **Start Paying Dues:** Membership dues are accepted through <a href={urlConstants.bookWhenMembership} data-goatcounter-click={urlConstants.bookWhenMembership}>BookWhen</a>. *Do not start paying dues before completing the steps above!*
+
+7. **Become a Part of the Community:** Once you're a member, you have access to the space to use as you please as long as it doesn't go against our community rules. Start using the space, join [a grove](./faq#what_is_a_grove), get involved, and help us maintain our workshop.
 
 ## What Membership Means
 
 - **Full Access:** Members have full access to our workshop and all equipment during open hours. Members are allowed to bring guests!
 - **A Supportive Community:** We believe every member contributes to the spirit of Sequoia Fabrica, whether by collaborating on projects, volunteering, mentoring others, or helping maintain the space. This is a place to connect, create, and grow together.
 - **Learning Opportunities:** Members are encouraged to share skills and knowledge with each other. Through workshops, peer mentoring, Grove projects, and informal collaboration, there are always opportunities to teach and learn from one another.
-- **A Voice**: As a member, you have a say in shaping Sequoia Fabrica. You'll be able to participate in organizational meetings and decision-making. Your feedback and ideas are critical as we continue improving our community.
+- **A Voice**: As a member (or volunteer), you have a say in shaping Sequoia Fabrica. You'll be able to participate in organizational meetings and decision-making. Your feedback and ideas are critical as we continue improving our community.
 
-Sequoia Fabrica is _not_ a rental workshop. Everyone is expected to help maintain the space and help with projects or events. Our volunteer-based structure is how we are able to provide an affordable space.
+Sequoia Fabrica is *not* a workshop for rent.
+Sequoia Fabrica is 100% volunteer-run and members are expected to keep the **safe, clean and orderly**.
+We live by the rule that you should leave a space cleaner than you found it.
+Our volunteer-based structure is how we are able to provide an affordable space.
 
-You must be 18 years of age or older to be a member. Members can bring family members or friends as their guests if working on a project together.
+You must be **18 years of age or older** to apply form membership.
 
-We do not currently have the ability to self-fund lower membership rates than those listed above. We'd love to offer more flexible terms if we can find funding and meet our monthly expenses.
+Members can bring friends or family as their guests for tours or working on projects together.
+
+## Cancelling Membership
+
+Read more about our cancellation procedure [here](https://wiki.sequoiafabrica.org/wiki/How_To_Pay_Membership_Dues#Cancelling_Membership).
 
 ## Still have Questions?
 Check our [FAQ page](./faq) for answers. If you don't find what you are looking for, please [reach out to us](./contact).
